added custom gui texture and updated default lang file